formatação do cabeçalho

--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bolos da Nalva</title>
+ <link rel="shortcut icon" href="imagens/vovo.png"
+type="image/x-icon">
+
+<link rel="stylesheet" href="estilos.css">
 </head>
+<header class="cabecalho"> 
+    <img src="imagens/vovo.png" class="logo" alt="Bolos da Nalva">
+    <h1 class="nome-loja">Bolos da <br> Nalva</h1>
+</header>
+
+
 <body>
     
 </body>
