finalização do cabeçalho

--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@ type="image/x-icon">
 </head>
 <header class="cabecalho"> 
     <img src="imagens/vovo.png" class="logo" alt="Bolos da Nalva">
-    <h1 class="nome-loja">Bolos da <br> Nalva</h1>
+    <h1 class="nome-loja">
+        <small class="texto-pequeno">Bolos da</small> 
+        <br> Nalva
+    </h1>
 </header>
+<nav class="menu">Cardápio-Fotos-Contato</nav>
 
 
 <body>
