criação e formatação do menu

--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@ type="image/x-icon">
         <br> Nalva
     </h1>
 </header>
-<nav class="menu">Cardápio-Fotos-Contato</nav>
-
+<nav class="menu">
+    <a href="#"class="item-menu">CARDÁPIO-</a>
+<a href ="#"class="item-menu">FOTOS-</a>
+<a href ="#"class="item-menu">CONTATO</a>
+</nav>
 
 <body>
     
