formatação do cardápio html e css

--- a/index.html
+++ b/index.html
@@ -1,29 +1,57 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bolos da Nalva</title>
- <link rel="shortcut icon" href="imagens/vovo.png"
-type="image/x-icon">
+    <link rel="shortcut icon" href="imagens/vovo.png" type="image/x-icon">
 
-<link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="estilos.css">
 </head>
-<header class="cabecalho"> 
+<header class="cabecalho">
     <img src="imagens/vovo.png" class="logo" alt="Bolos da Nalva">
     <h1 class="nome-loja">
-        <small class="texto-pequeno">Bolos da</small> 
+        <small class="texto-pequeno">Bolos da</small>
         <br> Nalva
     </h1>
 </header>
 <nav class="menu">
-    <a href="#"class="item-menu">CARDÁPIO-</a>
-<a href ="#"class="item-menu">FOTOS-</a>
-<a href ="#"class="item-menu">CONTATO</a>
+    <a href="#" class="item-menu">CARDÁPIO-</a>
+    <a href="#" class="item-menu">FOTOS-</a>
+    <a href="#" class="item-menu">CONTATO</a>
 </nav>
+<div class="banner"><img src="imagens/fun2.jpg" alt="bolo" class="foto-banner">
+</div>
+
+<div class="cardapio">
+    <h2 class="cardapio-titulo"> CARDÁPIO </h2>
+    <ul class="coluna-1">
+        <li> Bolo de laranja R$19,00 </li>
+        <li>Bolo de chocolate R$25,00</li>
+        <li>Bolo de fubá R$26,00</li>
+        <li> Bolo de limão R$27,00</li>
+
+        <li> Bolo de laranja R$19,00</li>
+        <li> Bolo de chocolate R$25,00</li>
+        <li> Bolo de fubá R$26,00</li>
+        <li> Bolo de limão R$27,00</li>
+
+        <li> Bolo de laranja R$19,00 </li>
+        <li> Bolo de chocolate R$25,00 </li>
+        <li> Bolo de fubá R$26,00</li>
+        <li> Bolo de limão R$27,00</li>
+    </ul>
+
+</div>
+
+
+
+</div>
 
 <body>
-    
+
 </body>
+
 </html>
