--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <header class="cabecalho">
-    <img src="imagens/vovo.png" class="logo" alt="Bolos da Nalva">
+    <img src="imagens/vovo.png" class="logo" alt="Bolos-da-Nalva">
     <h1 class="nome-loja">
         <small class="texto-pequeno">Bolos da</small>
         <br> Nalva
@@ -45,10 +45,23 @@
     </ul>
 
 </div>
+<div class="fotos">
+    <h2 class="titulo-fotos">FOTOS</h2>
+    <img src="imagens/bolo3.jpg" class="imagens" alt="fotos">
 
-
-
+    <img src="imagens/bolo2.jpg" class="bolo-2" alt="fotos">
 </div>
+<div class="contatos">
+    <h2 class="titulo-contatos">CONTATOS</h2>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3679.328661911515!2d-47.3312826849959!3d-22.753181138128262!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c8998174c896b9%3A0x739b7f99b3323574!2sSenac%20Americana!5e0!3m2!1spt-BR!2sbr!4v1638491610215!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+    </div>
+    <hr>
+    <div class="rodape"></div>
+    <small class="texto-pequeno">Bolos da</small>
+    <br> Nalva
+
+
 
 <body>
 
