formação do rodapé html e css

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     </h1>
 </header>
 <nav class="menu">
-    <a href="#" class="item-menu">CARDÁPIO-</a>
-    <a href="#" class="item-menu">FOTOS-</a>
-    <a href="#" class="item-menu">CONTATO</a>
+    <a href="#cardapio" class="item-menu">CARDÁPIO-</a>
+    <a href="#fotos" class="item-menu">FOTOS-</a>
+    <a href="#contato" class="item-menu">CONTATO</a>
 </nav>
 <div class="banner"><img src="imagens/fun2.jpg" alt="bolo" class="foto-banner">
 </div>
 
-<div class="cardapio">
+<div class="cardapio" id="cardapio">
     <h2 class="cardapio-titulo"> CARDÁPIO </h2>
     <ul class="coluna-1">
         <li> Bolo de laranja R$19,00 </li>
@@ -45,21 +45,26 @@
     </ul>
 
 </div>
-<div class="fotos">
+<div class="fotos" id="fotos">
     <h2 class="titulo-fotos">FOTOS</h2>
     <img src="imagens/bolo3.jpg" class="imagens" alt="fotos">
 
     <img src="imagens/bolo2.jpg" class="bolo-2" alt="fotos">
 </div>
-<div class="contatos">
-    <h2 class="titulo-contatos">CONTATOS</h2>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3679.328661911515!2d-47.3312826849959!3d-22.753181138128262!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c8998174c896b9%3A0x739b7f99b3323574!2sSenac%20Americana!5e0!3m2!1spt-BR!2sbr!4v1638491610215!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+<div class="contato" id="contato">
+    <h2 class="titulo-contato">CONTATO</h2>
+    <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3679.328661911515!2d-47.3312826849959!3d-22.753181138128262!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c8998174c896b9%3A0x739b7f99b3323574!2sSenac%20Americana!5e0!3m2!1spt-BR!2sbr!4v1638491610215!5m2!1spt-BR!2sbr"
+        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
-    </div>
-    <hr>
-    <div class="rodape"></div>
-    <small class="texto-pequeno">Bolos da</small>
+</div>
+<hr>
+<div class="rodape"></div>
+<h2 class="titulo-rodape"><small class="texto-pequeno">Bolos da</small>
     <br> Nalva
+</h2>
+   img
+
 
 
 
