conclusão do site de bolo

--- a/index.html
+++ b/index.html
@@ -57,14 +57,22 @@
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3679.328661911515!2d-47.3312826849959!3d-22.753181138128262!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c8998174c896b9%3A0x739b7f99b3323574!2sSenac%20Americana!5e0!3m2!1spt-BR!2sbr!4v1638491610215!5m2!1spt-BR!2sbr"
         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
-</div>
-<hr>
-<div class="rodape"></div>
+
+<div class="contato"></div>
 <h2 class="titulo-rodape"><small class="texto-pequeno">Bolos da</small>
     <br> Nalva
 </h2>
-   img
+<ul>
+<img src="imagens/face.png" class="facebook" alt="Meu facebook">
+</a>
 
+    <a href="https://instagram.com/nuness_wanderson">
+        
+        <img src="imagens/insta.png" class="instagram"alt="Meu instagram">
+    </a>
+</li>
+</ul>
+</div>
 
 
 
